// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalInformation UI Component renders correctly 1`] = `
<div>
  <div
    className=" rounded-sm"
    style={Object {}}
  >
    <div
      className="is-hidden-tablet-only is-hidden-mobile px-6 pb-0 pt-6"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed="0xf8d6e0586b0a20c7"
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              0xf8d6e0586b0a20c7
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          IPFS
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <a
            className="button is-text p-0 small-text"
            href="http://www.ipfs.com/QmZbsvX2ww3JtK6PGPHXu64ZkELN8kXhhSv7vkHcp9KQGr"
            rel="noopener noreferrer"
            style={
              Object {
                "height": "2rem !important",
              }
            }
            target="_blank"
          >
            <span
              className="has-tooltip-arrow has-tooltip-top is-flex is-flex-grow-1 is-align-items-center"
              data-tooltip="Open Ipfs link"
            >
              <p
                className="mr-2"
              >
                QmZbsvX2
              </p>
              <svg
                fill="none"
                height="12"
                viewBox="0 0 18 18"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.18858 12.3736C6.07757 12.3729 5.96922 12.3395 5.8771 12.2775C5.78499 12.2155 5.71322 12.1278 5.67077 12.0252C5.62833 11.9226 5.61711 11.8098 5.63851 11.7008C5.65991 11.5919 5.71299 11.4917 5.79108 11.4128L16.0811 1.1228H12.3768C12.2277 1.1228 12.0846 1.06354 11.9791 0.958053C11.8736 0.852563 11.8143 0.709489 11.8143 0.560305C11.8143 0.411121 11.8736 0.268047 11.9791 0.162557C12.0846 0.0570683 12.2277 -0.00219495 12.3768 -0.00219495H17.4393C17.5149 -0.00241413 17.5897 0.0129029 17.6591 0.0428051C17.795 0.100521 17.9027 0.209349 17.9591 0.345805L17.9666 0.365305C17.9901 0.42762 18.002 0.493702 18.0018 0.560305V5.6228C18.0018 5.77199 17.9426 5.91506 17.8371 6.02055C17.7316 6.12604 17.5885 6.1853 17.4393 6.1853C17.2902 6.1853 17.1471 6.12604 17.0416 6.02055C16.9361 5.91506 16.8768 5.77199 16.8768 5.6228V1.9193L6.58683 12.2093C6.5345 12.2615 6.47239 12.3029 6.40406 12.3311C6.33572 12.3592 6.2625 12.3737 6.18858 12.3736Z"
                  fill="#212121"
                />
                <path
                  d="M1.68848 17.9985C1.24105 17.9981 0.812054 17.8202 0.495673 17.5038C0.179291 17.1875 0.00137375 16.7585 0.000976562 16.311V2.06104C0.00137375 1.6136 0.179291 1.18461 0.495673 0.868231C0.812054 0.551849 1.24105 0.373932 1.68848 0.373535H7.43848C7.58766 0.373535 7.73074 0.432798 7.83622 0.538288C7.94171 0.643777 8.00098 0.786851 8.00098 0.936035C8.00098 1.08522 7.94171 1.22829 7.83622 1.33378C7.73074 1.43927 7.58766 1.49854 7.43848 1.49854H1.68848C1.53929 1.49854 1.39622 1.5578 1.29073 1.66329C1.18524 1.76878 1.12598 1.91185 1.12598 2.06104V16.311C1.12598 16.6215 1.37798 16.8735 1.68848 16.8735H15.9385C16.0877 16.8735 16.2307 16.8143 16.3362 16.7088C16.4417 16.6033 16.501 16.4602 16.501 16.311V10.561C16.501 10.4119 16.5602 10.2688 16.6657 10.1633C16.7712 10.0578 16.9143 9.99854 17.0635 9.99854C17.2127 9.99854 17.3557 10.0578 17.4612 10.1633C17.5667 10.2688 17.626 10.4119 17.626 10.561V16.311C17.6256 16.7585 17.4477 17.1875 17.1313 17.5038C16.8149 17.8202 16.3859 17.9981 15.9385 17.9985H1.68848Z"
                  fill="#212121"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 17, 2022, 3:24 AM
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 22, 2022, 3:24 AM
        </div>
      </div>
    </div>
    <div
      className="is-hidden-desktop is-hidden-mobile px-5 pb-0 pt-5"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed="0xf8d6e0586b0a20c7"
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              0xf8d6e0586b0a20c7
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          IPFS
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <a
            className="button is-text p-0 small-text"
            href="http://www.ipfs.com/QmZbsvX2ww3JtK6PGPHXu64ZkELN8kXhhSv7vkHcp9KQGr"
            rel="noopener noreferrer"
            style={
              Object {
                "height": "2rem !important",
              }
            }
            target="_blank"
          >
            <span
              className="has-tooltip-arrow has-tooltip-top is-flex is-flex-grow-1 is-align-items-center"
              data-tooltip="Open Ipfs link"
            >
              <p
                className="mr-2"
              >
                QmZbsvX2
              </p>
              <svg
                fill="none"
                height="12"
                viewBox="0 0 18 18"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.18858 12.3736C6.07757 12.3729 5.96922 12.3395 5.8771 12.2775C5.78499 12.2155 5.71322 12.1278 5.67077 12.0252C5.62833 11.9226 5.61711 11.8098 5.63851 11.7008C5.65991 11.5919 5.71299 11.4917 5.79108 11.4128L16.0811 1.1228H12.3768C12.2277 1.1228 12.0846 1.06354 11.9791 0.958053C11.8736 0.852563 11.8143 0.709489 11.8143 0.560305C11.8143 0.411121 11.8736 0.268047 11.9791 0.162557C12.0846 0.0570683 12.2277 -0.00219495 12.3768 -0.00219495H17.4393C17.5149 -0.00241413 17.5897 0.0129029 17.6591 0.0428051C17.795 0.100521 17.9027 0.209349 17.9591 0.345805L17.9666 0.365305C17.9901 0.42762 18.002 0.493702 18.0018 0.560305V5.6228C18.0018 5.77199 17.9426 5.91506 17.8371 6.02055C17.7316 6.12604 17.5885 6.1853 17.4393 6.1853C17.2902 6.1853 17.1471 6.12604 17.0416 6.02055C16.9361 5.91506 16.8768 5.77199 16.8768 5.6228V1.9193L6.58683 12.2093C6.5345 12.2615 6.47239 12.3029 6.40406 12.3311C6.33572 12.3592 6.2625 12.3737 6.18858 12.3736Z"
                  fill="#212121"
                />
                <path
                  d="M1.68848 17.9985C1.24105 17.9981 0.812054 17.8202 0.495673 17.5038C0.179291 17.1875 0.00137375 16.7585 0.000976562 16.311V2.06104C0.00137375 1.6136 0.179291 1.18461 0.495673 0.868231C0.812054 0.551849 1.24105 0.373932 1.68848 0.373535H7.43848C7.58766 0.373535 7.73074 0.432798 7.83622 0.538288C7.94171 0.643777 8.00098 0.786851 8.00098 0.936035C8.00098 1.08522 7.94171 1.22829 7.83622 1.33378C7.73074 1.43927 7.58766 1.49854 7.43848 1.49854H1.68848C1.53929 1.49854 1.39622 1.5578 1.29073 1.66329C1.18524 1.76878 1.12598 1.91185 1.12598 2.06104V16.311C1.12598 16.6215 1.37798 16.8735 1.68848 16.8735H15.9385C16.0877 16.8735 16.2307 16.8143 16.3362 16.7088C16.4417 16.6033 16.501 16.4602 16.501 16.311V10.561C16.501 10.4119 16.5602 10.2688 16.6657 10.1633C16.7712 10.0578 16.9143 9.99854 17.0635 9.99854C17.2127 9.99854 17.3557 10.0578 17.4612 10.1633C17.5667 10.2688 17.626 10.4119 17.626 10.561V16.311C17.6256 16.7585 17.4477 17.1875 17.1313 17.5038C16.8149 17.8202 16.3859 17.9981 15.9385 17.9985H1.68848Z"
                  fill="#212121"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 17, 2022, 3:24 AM
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 22, 2022, 3:24 AM
        </div>
      </div>
    </div>
    <div
      className="is-hidden-tablet px-1 pb-0 pt-1"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed="0xf8d6e0586b0a20c7"
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              0xf8d6e0586b0a20c7
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          IPFS
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <a
            className="button is-text p-0 small-text"
            href="http://www.ipfs.com/QmZbsvX2ww3JtK6PGPHXu64ZkELN8kXhhSv7vkHcp9KQGr"
            rel="noopener noreferrer"
            style={
              Object {
                "height": "2rem !important",
              }
            }
            target="_blank"
          >
            <span
              className="has-tooltip-arrow has-tooltip-top is-flex is-flex-grow-1 is-align-items-center"
              data-tooltip="Open Ipfs link"
            >
              <p
                className="mr-2"
              >
                QmZbsvX2
              </p>
              <svg
                fill="none"
                height="12"
                viewBox="0 0 18 18"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.18858 12.3736C6.07757 12.3729 5.96922 12.3395 5.8771 12.2775C5.78499 12.2155 5.71322 12.1278 5.67077 12.0252C5.62833 11.9226 5.61711 11.8098 5.63851 11.7008C5.65991 11.5919 5.71299 11.4917 5.79108 11.4128L16.0811 1.1228H12.3768C12.2277 1.1228 12.0846 1.06354 11.9791 0.958053C11.8736 0.852563 11.8143 0.709489 11.8143 0.560305C11.8143 0.411121 11.8736 0.268047 11.9791 0.162557C12.0846 0.0570683 12.2277 -0.00219495 12.3768 -0.00219495H17.4393C17.5149 -0.00241413 17.5897 0.0129029 17.6591 0.0428051C17.795 0.100521 17.9027 0.209349 17.9591 0.345805L17.9666 0.365305C17.9901 0.42762 18.002 0.493702 18.0018 0.560305V5.6228C18.0018 5.77199 17.9426 5.91506 17.8371 6.02055C17.7316 6.12604 17.5885 6.1853 17.4393 6.1853C17.2902 6.1853 17.1471 6.12604 17.0416 6.02055C16.9361 5.91506 16.8768 5.77199 16.8768 5.6228V1.9193L6.58683 12.2093C6.5345 12.2615 6.47239 12.3029 6.40406 12.3311C6.33572 12.3592 6.2625 12.3737 6.18858 12.3736Z"
                  fill="#212121"
                />
                <path
                  d="M1.68848 17.9985C1.24105 17.9981 0.812054 17.8202 0.495673 17.5038C0.179291 17.1875 0.00137375 16.7585 0.000976562 16.311V2.06104C0.00137375 1.6136 0.179291 1.18461 0.495673 0.868231C0.812054 0.551849 1.24105 0.373932 1.68848 0.373535H7.43848C7.58766 0.373535 7.73074 0.432798 7.83622 0.538288C7.94171 0.643777 8.00098 0.786851 8.00098 0.936035C8.00098 1.08522 7.94171 1.22829 7.83622 1.33378C7.73074 1.43927 7.58766 1.49854 7.43848 1.49854H1.68848C1.53929 1.49854 1.39622 1.5578 1.29073 1.66329C1.18524 1.76878 1.12598 1.91185 1.12598 2.06104V16.311C1.12598 16.6215 1.37798 16.8735 1.68848 16.8735H15.9385C16.0877 16.8735 16.2307 16.8143 16.3362 16.7088C16.4417 16.6033 16.501 16.4602 16.501 16.311V10.561C16.501 10.4119 16.5602 10.2688 16.6657 10.1633C16.7712 10.0578 16.9143 9.99854 17.0635 9.99854C17.2127 9.99854 17.3557 10.0578 17.4612 10.1633C17.5667 10.2688 17.626 10.4119 17.626 10.561V16.311C17.6256 16.7585 17.4477 17.1875 17.1313 17.5038C16.8149 17.8202 16.3859 17.9981 15.9385 17.9985H1.68848Z"
                  fill="#212121"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 17, 2022, 3:24 AM
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 22, 2022, 3:24 AM
        </div>
      </div>
    </div>
    <hr />
    <div
      className="is-hidden-desktop is-hidden-mobile px-5 pt-3 pb-4"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
    <div
      className="is-hidden-tablet-only is-hidden-mobile px-6 pt-2 pb-6"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
    <div
      className="is-hidden-tablet px-1 pt-1 pb-1"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
  </div>
</div>
`;

exports[`ProposalInformation UI Component renders correctly with className 1`] = `
<div>
  <div
    className="has-background-white-ter rounded-sm"
    style={Object {}}
  >
    <div
      className="is-hidden-tablet-only is-hidden-mobile px-6 pb-0 pt-6"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed="0xf8d6e0586b0a20c7"
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              0xf8d6e0586b0a20c7
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          IPFS
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <a
            className="button is-text p-0 small-text"
            href="http://www.ipfs.com/QmZbsvX2ww3JtK6PGPHXu64ZkELN8kXhhSv7vkHcp9KQGr"
            rel="noopener noreferrer"
            style={
              Object {
                "height": "2rem !important",
              }
            }
            target="_blank"
          >
            <span
              className="has-tooltip-arrow has-tooltip-top is-flex is-flex-grow-1 is-align-items-center"
              data-tooltip="Open Ipfs link"
            >
              <p
                className="mr-2"
              >
                QmZbsvX2
              </p>
              <svg
                fill="none"
                height="12"
                viewBox="0 0 18 18"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.18858 12.3736C6.07757 12.3729 5.96922 12.3395 5.8771 12.2775C5.78499 12.2155 5.71322 12.1278 5.67077 12.0252C5.62833 11.9226 5.61711 11.8098 5.63851 11.7008C5.65991 11.5919 5.71299 11.4917 5.79108 11.4128L16.0811 1.1228H12.3768C12.2277 1.1228 12.0846 1.06354 11.9791 0.958053C11.8736 0.852563 11.8143 0.709489 11.8143 0.560305C11.8143 0.411121 11.8736 0.268047 11.9791 0.162557C12.0846 0.0570683 12.2277 -0.00219495 12.3768 -0.00219495H17.4393C17.5149 -0.00241413 17.5897 0.0129029 17.6591 0.0428051C17.795 0.100521 17.9027 0.209349 17.9591 0.345805L17.9666 0.365305C17.9901 0.42762 18.002 0.493702 18.0018 0.560305V5.6228C18.0018 5.77199 17.9426 5.91506 17.8371 6.02055C17.7316 6.12604 17.5885 6.1853 17.4393 6.1853C17.2902 6.1853 17.1471 6.12604 17.0416 6.02055C16.9361 5.91506 16.8768 5.77199 16.8768 5.6228V1.9193L6.58683 12.2093C6.5345 12.2615 6.47239 12.3029 6.40406 12.3311C6.33572 12.3592 6.2625 12.3737 6.18858 12.3736Z"
                  fill="#212121"
                />
                <path
                  d="M1.68848 17.9985C1.24105 17.9981 0.812054 17.8202 0.495673 17.5038C0.179291 17.1875 0.00137375 16.7585 0.000976562 16.311V2.06104C0.00137375 1.6136 0.179291 1.18461 0.495673 0.868231C0.812054 0.551849 1.24105 0.373932 1.68848 0.373535H7.43848C7.58766 0.373535 7.73074 0.432798 7.83622 0.538288C7.94171 0.643777 8.00098 0.786851 8.00098 0.936035C8.00098 1.08522 7.94171 1.22829 7.83622 1.33378C7.73074 1.43927 7.58766 1.49854 7.43848 1.49854H1.68848C1.53929 1.49854 1.39622 1.5578 1.29073 1.66329C1.18524 1.76878 1.12598 1.91185 1.12598 2.06104V16.311C1.12598 16.6215 1.37798 16.8735 1.68848 16.8735H15.9385C16.0877 16.8735 16.2307 16.8143 16.3362 16.7088C16.4417 16.6033 16.501 16.4602 16.501 16.311V10.561C16.501 10.4119 16.5602 10.2688 16.6657 10.1633C16.7712 10.0578 16.9143 9.99854 17.0635 9.99854C17.2127 9.99854 17.3557 10.0578 17.4612 10.1633C17.5667 10.2688 17.626 10.4119 17.626 10.561V16.311C17.6256 16.7585 17.4477 17.1875 17.1313 17.5038C16.8149 17.8202 16.3859 17.9981 15.9385 17.9985H1.68848Z"
                  fill="#212121"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 17, 2022, 3:24 AM
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 22, 2022, 3:24 AM
        </div>
      </div>
    </div>
    <div
      className="is-hidden-desktop is-hidden-mobile px-5 pb-0 pt-5"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed="0xf8d6e0586b0a20c7"
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              0xf8d6e0586b0a20c7
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          IPFS
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <a
            className="button is-text p-0 small-text"
            href="http://www.ipfs.com/QmZbsvX2ww3JtK6PGPHXu64ZkELN8kXhhSv7vkHcp9KQGr"
            rel="noopener noreferrer"
            style={
              Object {
                "height": "2rem !important",
              }
            }
            target="_blank"
          >
            <span
              className="has-tooltip-arrow has-tooltip-top is-flex is-flex-grow-1 is-align-items-center"
              data-tooltip="Open Ipfs link"
            >
              <p
                className="mr-2"
              >
                QmZbsvX2
              </p>
              <svg
                fill="none"
                height="12"
                viewBox="0 0 18 18"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.18858 12.3736C6.07757 12.3729 5.96922 12.3395 5.8771 12.2775C5.78499 12.2155 5.71322 12.1278 5.67077 12.0252C5.62833 11.9226 5.61711 11.8098 5.63851 11.7008C5.65991 11.5919 5.71299 11.4917 5.79108 11.4128L16.0811 1.1228H12.3768C12.2277 1.1228 12.0846 1.06354 11.9791 0.958053C11.8736 0.852563 11.8143 0.709489 11.8143 0.560305C11.8143 0.411121 11.8736 0.268047 11.9791 0.162557C12.0846 0.0570683 12.2277 -0.00219495 12.3768 -0.00219495H17.4393C17.5149 -0.00241413 17.5897 0.0129029 17.6591 0.0428051C17.795 0.100521 17.9027 0.209349 17.9591 0.345805L17.9666 0.365305C17.9901 0.42762 18.002 0.493702 18.0018 0.560305V5.6228C18.0018 5.77199 17.9426 5.91506 17.8371 6.02055C17.7316 6.12604 17.5885 6.1853 17.4393 6.1853C17.2902 6.1853 17.1471 6.12604 17.0416 6.02055C16.9361 5.91506 16.8768 5.77199 16.8768 5.6228V1.9193L6.58683 12.2093C6.5345 12.2615 6.47239 12.3029 6.40406 12.3311C6.33572 12.3592 6.2625 12.3737 6.18858 12.3736Z"
                  fill="#212121"
                />
                <path
                  d="M1.68848 17.9985C1.24105 17.9981 0.812054 17.8202 0.495673 17.5038C0.179291 17.1875 0.00137375 16.7585 0.000976562 16.311V2.06104C0.00137375 1.6136 0.179291 1.18461 0.495673 0.868231C0.812054 0.551849 1.24105 0.373932 1.68848 0.373535H7.43848C7.58766 0.373535 7.73074 0.432798 7.83622 0.538288C7.94171 0.643777 8.00098 0.786851 8.00098 0.936035C8.00098 1.08522 7.94171 1.22829 7.83622 1.33378C7.73074 1.43927 7.58766 1.49854 7.43848 1.49854H1.68848C1.53929 1.49854 1.39622 1.5578 1.29073 1.66329C1.18524 1.76878 1.12598 1.91185 1.12598 2.06104V16.311C1.12598 16.6215 1.37798 16.8735 1.68848 16.8735H15.9385C16.0877 16.8735 16.2307 16.8143 16.3362 16.7088C16.4417 16.6033 16.501 16.4602 16.501 16.311V10.561C16.501 10.4119 16.5602 10.2688 16.6657 10.1633C16.7712 10.0578 16.9143 9.99854 17.0635 9.99854C17.2127 9.99854 17.3557 10.0578 17.4612 10.1633C17.5667 10.2688 17.626 10.4119 17.626 10.561V16.311C17.6256 16.7585 17.4477 17.1875 17.1313 17.5038C16.8149 17.8202 16.3859 17.9981 15.9385 17.9985H1.68848Z"
                  fill="#212121"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 17, 2022, 3:24 AM
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 22, 2022, 3:24 AM
        </div>
      </div>
    </div>
    <div
      className="is-hidden-tablet px-1 pb-0 pt-1"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed="0xf8d6e0586b0a20c7"
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              0xf8d6e0586b0a20c7
            </div>
          </div>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          IPFS
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <a
            className="button is-text p-0 small-text"
            href="http://www.ipfs.com/QmZbsvX2ww3JtK6PGPHXu64ZkELN8kXhhSv7vkHcp9KQGr"
            rel="noopener noreferrer"
            style={
              Object {
                "height": "2rem !important",
              }
            }
            target="_blank"
          >
            <span
              className="has-tooltip-arrow has-tooltip-top is-flex is-flex-grow-1 is-align-items-center"
              data-tooltip="Open Ipfs link"
            >
              <p
                className="mr-2"
              >
                QmZbsvX2
              </p>
              <svg
                fill="none"
                height="12"
                viewBox="0 0 18 18"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.18858 12.3736C6.07757 12.3729 5.96922 12.3395 5.8771 12.2775C5.78499 12.2155 5.71322 12.1278 5.67077 12.0252C5.62833 11.9226 5.61711 11.8098 5.63851 11.7008C5.65991 11.5919 5.71299 11.4917 5.79108 11.4128L16.0811 1.1228H12.3768C12.2277 1.1228 12.0846 1.06354 11.9791 0.958053C11.8736 0.852563 11.8143 0.709489 11.8143 0.560305C11.8143 0.411121 11.8736 0.268047 11.9791 0.162557C12.0846 0.0570683 12.2277 -0.00219495 12.3768 -0.00219495H17.4393C17.5149 -0.00241413 17.5897 0.0129029 17.6591 0.0428051C17.795 0.100521 17.9027 0.209349 17.9591 0.345805L17.9666 0.365305C17.9901 0.42762 18.002 0.493702 18.0018 0.560305V5.6228C18.0018 5.77199 17.9426 5.91506 17.8371 6.02055C17.7316 6.12604 17.5885 6.1853 17.4393 6.1853C17.2902 6.1853 17.1471 6.12604 17.0416 6.02055C16.9361 5.91506 16.8768 5.77199 16.8768 5.6228V1.9193L6.58683 12.2093C6.5345 12.2615 6.47239 12.3029 6.40406 12.3311C6.33572 12.3592 6.2625 12.3737 6.18858 12.3736Z"
                  fill="#212121"
                />
                <path
                  d="M1.68848 17.9985C1.24105 17.9981 0.812054 17.8202 0.495673 17.5038C0.179291 17.1875 0.00137375 16.7585 0.000976562 16.311V2.06104C0.00137375 1.6136 0.179291 1.18461 0.495673 0.868231C0.812054 0.551849 1.24105 0.373932 1.68848 0.373535H7.43848C7.58766 0.373535 7.73074 0.432798 7.83622 0.538288C7.94171 0.643777 8.00098 0.786851 8.00098 0.936035C8.00098 1.08522 7.94171 1.22829 7.83622 1.33378C7.73074 1.43927 7.58766 1.49854 7.43848 1.49854H1.68848C1.53929 1.49854 1.39622 1.5578 1.29073 1.66329C1.18524 1.76878 1.12598 1.91185 1.12598 2.06104V16.311C1.12598 16.6215 1.37798 16.8735 1.68848 16.8735H15.9385C16.0877 16.8735 16.2307 16.8143 16.3362 16.7088C16.4417 16.6033 16.501 16.4602 16.501 16.311V10.561C16.501 10.4119 16.5602 10.2688 16.6657 10.1633C16.7712 10.0578 16.9143 9.99854 17.0635 9.99854C17.2127 9.99854 17.3557 10.0578 17.4612 10.1633C17.5667 10.2688 17.626 10.4119 17.626 10.561V16.311C17.6256 16.7585 17.4477 17.1875 17.1313 17.5038C16.8149 17.8202 16.3859 17.9981 15.9385 17.9985H1.68848Z"
                  fill="#212121"
                />
              </svg>
            </span>
          </a>
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 17, 2022, 3:24 AM
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Dec 22, 2022, 3:24 AM
        </div>
      </div>
    </div>
    <hr />
    <div
      className="is-hidden-desktop is-hidden-mobile px-5 pt-3 pb-4"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
    <div
      className="is-hidden-tablet-only is-hidden-mobile px-6 pt-2 pb-6"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
    <div
      className="is-hidden-tablet px-1 pt-1 pb-1"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
  </div>
</div>
`;

exports[`ProposalInformation UI Component renders correctly with no props 1`] = `
<div>
  <div
    className=" rounded-sm"
    style={Object {}}
  >
    <div
      className="is-hidden-tablet-only is-hidden-mobile px-6 pb-0 pt-6"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed=""
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              
            </div>
          </div>
        </div>
      </div>
      
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Invalid Date
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Invalid Date
        </div>
      </div>
    </div>
    <div
      className="is-hidden-desktop is-hidden-mobile px-5 pb-0 pt-5"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed=""
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              
            </div>
          </div>
        </div>
      </div>
      
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Invalid Date
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Invalid Date
        </div>
      </div>
    </div>
    <div
      className="is-hidden-tablet px-1 pb-0 pt-1"
    >
      <p
        className="mb-5"
      >
        Information
      </p>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Author
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          <div
            className="columns is-mobile m-0"
          >
            <div
              className="column is-narrow is-flex is-align-items-center p-0"
            >
              <blockies-component-mock
                className="blockies"
                scale={4}
                seed=""
                size={6}
              />
            </div>
            <div
              className="column px-2 py-0 is-flex flex-1 is-align-items-center"
            >
              
            </div>
          </div>
        </div>
      </div>
      
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          Start date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Invalid Date
        </div>
      </div>
      <div
        className="columns is-mobile p-0 m-0 mb-5 small-text"
      >
        <div
          className="column p-0 is-flex is-align-items-center flex-1 has-text-grey"
          style={
            Object {
              "maxWidth": "40%",
            }
          }
        >
          End date
        </div>
        <div
          className="column p-0 is-flex flex-1 is-align-items-center"
          style={
            Object {
              "height": "1.5rem",
            }
          }
        >
          Invalid Date
        </div>
      </div>
    </div>
    <hr />
    <div
      className="is-hidden-desktop is-hidden-mobile px-5 pt-3 pb-4"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
    <div
      className="is-hidden-tablet-only is-hidden-mobile px-6 pt-2 pb-6"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
    <div
      className="is-hidden-tablet px-1 pt-1 pb-1"
    >
      <p
        className="mb-5"
      >
        Current Results
      </p>
    </div>
  </div>
</div>
`;
